# textlen

./: .gitignore  AGENTS.md  README.md  pyproject.toml
length/: README.md  pyproject.toml
length/length/: main.py
tests/: test_main.py
textlen/: main.py
