[tool.poetry]
name = "textlen"
version = "0.1.0"
description = ""
authors = ["Rud Faden <rudfaden@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.13.1"

[tool.poetry.scripts]
textlen = "textlen.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
