[tool.poetry]
name = "length"
version = "0.1.0"
description = ""
authors = ["Rud Faden <rudfaden@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.1"
typer = "^0.13.1"

[tool.poetry.scripts]
lenght = "length.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
